added some prefixes

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,8 +2,14 @@
     width: 100%;
     padding-top: 30px;
     height: 52px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
 }
 
@@ -25,4 +31,3 @@
         padding: 16px 16px 0;
     }
 }
-
